--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -3,24 +3,26 @@
   "robotLength": 0.838,
   "holonomicMode": true,
   "pathFolders": [
-    "Mid",
     "Left",
+    "Mid",
+    "Test Paths",
     "Right"
   ],
   "autoFolders": [
-    "2025 comp"
+    "2025 comp",
+    "Test Autos"
   ],
   "defaultMaxVel": 1.5,
   "defaultMaxAccel": 1.5,
   "defaultMaxAngVel": 540.0,
   "defaultMaxAngAccel": 720.0,
   "defaultNominalVoltage": 12.0,
-  "robotMass": 49.9,
+  "robotMass": 51.26,
   "robotMOI": 6.883,
   "robotTrackwidth": 0.546,
   "driveWheelRadius": 0.0381,
   "driveGearing": 4.71,
-  "maxDriveSpeed": 3.6,
+  "maxDriveSpeed": 4.8,
   "driveMotorType": "NEO",
   "driveCurrentLimit": 50.0,
   "wheelCOF": 1.2,
